--- a/Simple Linear Regression.ipynb
+++ b/Simple Linear Regression.ipynb
@@ -842,19 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "salary = pd.read_fwf(\"salary.txt\", header=None, \n",
-    "                 names=[\"Sex\", \"Rank\", \"Year\", \"Degree\", \"YSdeg\", \"Salary\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -1404,13 +1392,90 @@
        "51    1     1     0       1      2   20300"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "salary = pd.read_fwf(\"salary.txt\", header=None, \n",
+    "                 names=[\"Sex\", \"Rank\", \"Year\", \"Degree\", \"YSdeg\", \"Salary\"])\n",
     "salary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients: \n",
+      " [[ 1241.7924996   5586.18144952   482.85976783 -1331.64406341\n",
+      "   -128.79057354]]\n",
+      "0.854718067441\n"
+     ]
+    }
+   ],
+   "source": [
+    "salary = salary.loc[:, ['Sex','Rank','Year','Degree','YSdeg','Salary']]\n",
+    "\n",
+    "salary_input = salary[['Sex','Rank','Year','Degree','YSdeg']]\n",
+    "salary_output = salary[['Salary']]\n",
+    "\n",
+    "regr4 = linear_model.LinearRegression()\n",
+    "\n",
+    "fit = regr4.fit(salary_input, salary_output)\n",
+    "print('Coefficients: \\n', regr4.coef_)\n",
+    "print(regr4.score(salary_input, salary_output))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This equation fits this data set. There is a strong positive correlation between Sex, Rank, Year, Degree, YSdeg, and Salary. The r**2 is .85."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients: \n",
+      " [[ 4731.2563918   376.4992803]]\n",
+      "0.843648093326\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_salary = salary.loc[:, ['Rank','Year','Salary']]\n",
+    "\n",
+    "salary_input1 = salary[['Rank','Year']]\n",
+    "salary_output1 = salary[['Salary']]\n",
+    "\n",
+    "regr5 = linear_model.LinearRegression()\n",
+    "\n",
+    "fit = regr5.fit(salary_input1, salary_output1)\n",
+    "print('Coefficients: \\n', regr5.coef_)\n",
+    "print(regr5.score(salary_input1, salary_output1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I went through 10 trials of different predictor combinations to see which factors would best predict salary. First, Sex was not a factor for determining Salary. Secondly, I found that YSdeg and Degree were also not determining factors for salary. They showed very little change in correlation when they were removed from the analysis. However, the best factors for determining Salary are Rank, Year, and YSdeg. The YSdeg increases the strength of the correlation by approximately .002. In conclusion, the strongest correlation is still Sex, Rank, Year, Degree, YSdeg, and Salary."
    ]
   },
   {
